# federated-finetuning

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
api/: index.html
customization/: index.html
demo/: app.py  run.sh
docs/: api.md  customization.md  future-features-contributions.md  getting-started.md  index.md  step-by-step-guide.md
future-features-contributions/: index.html
getting-started/: index.html
search/: search_index.json
src/: fine-tune-local.py  plot_results.py
src/benchmarks/finance/: benchmarks.py  eval.py  utils.py
src/benchmarks/general-nlp/: benchmarks.py  eval.py  utils.py
src/benchmarks/medical/: benchmarks.py  eval.py  utils.py
src/flowertune_llm/: client_app.py  dataset.py  models.py  server_app.py
step-by-step-guide/: index.html
tests/unit/: test_hello.py
